<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.pivotal.android.data.sample.activity.DataEditorActivity" >

    <item android:id="@+id/action_fetch"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/action_fetch"
        app:showAsAction="always" />

    <item android:id="@+id/action_save"
        android:icon="@drawable/ic_menu_save"
        android:title="@string/action_save"
        app:showAsAction="always" />

    <item android:id="@+id/action_add_item"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/add_item"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_delete_item"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/delete_item"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_delete_object"
          android:icon="@drawable/ic_menu_delete"
          android:title="@string/delete_object"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_clear_items"
          android:icon="@drawable/ic_menu_revert"
          android:title="@string/action_clear_items"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_view_json"
          android:icon="@drawable/ic_menu_json"
          android:title="@string/view_json"
          app:showAsAction="ifRoom"/>
</menu>
